...
                fontSize: 16.0,
                color: Colors.grey[700],
              ),
            ),
            SizedBox(height: 50.0),
            RaisedButton(
              key: Key('botonIrAModificarPerfil'),
              onPressed: () {
                Navigator.of(context).push(MaterialPageRoute(
                    builder: (BuildContext context) => ModifPerfil()));
              },
              color: Colors.green,
              padding: EdgeInsets.symmetric(horizontal: 50),
...
